implement second draft of rented studio timers, now with html rendering